            - a fluid stack
            - a fluid item container
            - a fluid block base class

    Launch options:
        - added options to disable mod loader, data pack loader, and resource pack loader
        - boosted server load cycle even more

    Build System:
        - major fixes to the system

    Rendering:
        - some fixes around rotations in block models


changelog of snapshot 21w04a released on 27.01.2021, targeting 21w03a
    This snapshot broke backwards compatibility, again...
    Namely (the most note-able):
    - item factories
    - crafting recipes
    - behaviour changes of BlockFaceState, for better performance
    - command system
    - inventory system (pushed in direction of container separation)

    Commands:
        - added /blockinfo command giving information about the block currently looking at
        - added /recipeview command for below recipe view
        - /execute has now a registry-like structure for sub-nodes
        - /execute in takes now a dimension name instead of its ID
        - defined /execute var [currently not use-able]

    Rendering:
        - improved block rendering

    Server:
        - improved server separation from client

    Crafting:
        - added a screen system for displaying recipes, with extension point for mods, with plans for features
            like in JEI
        - rewritten base recipe API

    Documentation:
        - fixed documentation generation
        - updated & improved docs

    API:
        - ItemFactory is now also created by FactoryBuilder
        - this is breaking existing code, again...
        - added a new combined factory system using in-memory calculations

    Build System:
        - improved undocumented build
        - started writing a binary building API based on https://github.com/Nuitka/Nuitka

    Fixed issues:
        - escaping in logs did not work in some edge cases correctly
        - major rendering issue when updating blocks